--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,72 +10,91 @@
       href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
-		<header>
-			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-			<nav>
-				<ul>
-					<a href="#portfolio"><li>projets</li></a>
-					<a href="#contact"><li>contact</li></a>
-					<a href="login.html"><li class="">login</li></a>
-					<li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
-				</a>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		<section id="introduction">
-			<figure>
-				<img src="./assets/images/sophie-bluel.png" alt="" />
-			</figure>
-			<article>
-				<h2>Designer d'espace</h2>
-				<p>
-					Je raconte votre histoire, je valorise vos idées. Je vous accompagnede la conception à la livraison finale du chantier.
-				</p>
-				<p>
-					Chaque projet sera étudié en commun, de façon à mettre en valeur lesvolumes, les matières et les couleurs dans le respect de l’espritdes lieux et le choix adapté des matériaux. Le suivi du chantiersera assuré dans le souci du détail, le respect du planning et dubudget.
-				</p>
-				<p>
-					En cas de besoin, une équipe pluridisciplinaire peut-être constituée: architecte DPLG, décorateur(trice)
-				</p>
-			</article>
-		</section>
-		<section id="portfolio">
-			<h2>Mes Projets</h2>
-			<div id="categories">
-				<!-- Les catégories seront ajoutées dynamiquement ici -->
-			</div>
-			<div class="gallery">
-				<!-- Les projets seront ajoutés dynamiquement ici -->
-			</div>
-		</section>
-		<section id="contact">
-			<h2>Contact</h2>
-			<p>
-				Vous avez un projet ? Discutons-en !
-			</p>
-			<form action="#" method="post">
-				<label for="name">Nom</label>
-				<input type="text" name="name" id="name" />
-				<label for="email">Email</label>
-				<input type="email" name="email" id="email" />
-				<label for="message">Message</label>
-				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer" />
-			</form>
-		</section>
-	</main>
-	<footer>
-		<nav>
-			<ul>
-				<li>Mentions Légales</li>
-			</ul>
-		</nav>
-	</footer>
-	<script src="./assets/js/main.js"></script>
-</body>
+    <div class="topbar">
+      <i class="fa-regular fa-pen-to-square"></i>
+      <span class="topbar_edit">Mode édition</span>
+    </div>
+    <header>
+      <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+      <nav>
+        <ul>
+          <li><a href="#portfolio">projets</a></li>
+          <li><a href="#contact">contact</a></li>
+          <li><a href="login.html" id="nav-login">login</a></li>
+          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="introduction">
+        <figure>
+          <img src="./assets/images/sophie-bluel.png" alt="" />
+        </figure>
+        <article>
+          <h2>Designer d'espace</h2>
+          <p>
+            Je raconte votre histoire, je valorise vos idées. Je vous accompagne
+            de la conception à la livraison finale du chantier.
+          </p>
+          <p>
+            Chaque projet sera étudié en commun, de façon à mettre en valeur les
+            volumes, les matières et les couleurs dans le respect de l’esprit
+            des lieux et le choix adapté des matériaux. Le suivi du chantier
+            sera assuré dans le souci du détail, le respect du planning et du
+            budget.
+          </p>
+          <p>
+            En cas de besoin, une équipe pluridisciplinaire peut-être
+            constituée: architecte DPLG, décorateur(trice).
+          </p>
+        </article>
+      </section>
+      <section id="portfolio">
+        <div class="modifier">
+          <h2>Mes Projets</h2>
+          <a href="#" class="btnmodal"
+            ><i class="fa-regular fa-pen-to-square"></i>modifier
+          </a>
+        </div>
+        <div id="categories">
+          <!-- Les catégories seront ajoutées dynamiquement ici -->
+        </div>
+        <div class="gallery">
+          <!-- Les projets seront ajoutés dynamiquement ici -->
+        </div>
+      </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Vous avez un projet ? Discutons-en !</p>
+        <form action="#" method="post">
+          <label for="name">Nom</label>
+          <input type="text" name="name" id="name" />
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" />
+          <label for="message">Message</label>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+          <input type="submit" value="Envoyer" />
+        </form>
+      </section>
+    </main>
+    <footer>
+      <nav>
+        <ul>
+          <li>Mentions Légales</li>
+        </ul>
+      </nav>
+    </footer>
+    <script src="./assets/js/main.js" defer></script>
+  </body>
 </html>
