--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -12,24 +12,21 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
-
-    <script type="module" src="./assets/script/login.js"></script>
   </head>
   <body>
     <header>
       <a href="index.html">
-        <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       </a>
       <nav>
         <ul>
-          <a href="index.html">
-            <li>Retour</li>
-          </a>
+          <li><a href="index.html">projets</a></li>
+          <li><a href="index.html#contact">contact</a></li>
+          <li><a href="login.html" id="nav-login">login</a></li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
     </header>
-
     <main>
       <section class="login">
         <h2>Log In</h2>
@@ -46,13 +43,14 @@
         <a href="">Mot de passe oublié</a>
       </section>
     </main>
-
     <footer>
       <nav>
         <ul>
           <li>Mentions Légales</li>
         </ul>
       </nav>
+      <script src="./assets/js/login.js" defer></script>
+      <!-- Charger le script spécifique à la page login -->
     </footer>
   </body>
 </html>
