--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -87,6 +87,70 @@
           <input type="submit" value="Envoyer" />
         </form>
       </section>
+      <!-- Creation modal -->
+      <div
+        id="modal"
+        class="modal-overlay"
+        aria-hidden="true"
+        role="dialog"
+        aria-labelledby="title-modal-overlay"
+      >
+        <div id="modal-works" class="modal-gallery">
+          <a id="button-to-close-first-window" href="#" class="modal-close"
+            ><i class="fa-solid fa-xmark"></i
+          ></a>
+          <h3 id="title-modal-overlay" class="modal-title">Galerie photo</h3>
+          <div class="modal-content"></div>
+          <hr />
+          <div class="container-modal-add-and-modal-delete">
+            <button id="modal-edit-add" class="modal-add">
+              Ajouter une photo
+            </button>
+            <a href="#" class="modal-delete-all">Supprimer la galerie</a>
+          </div>
+        </div>
+        <div id="modal-edit" class="modal-edit-work">
+          <div class="container-for-icon-in-second-window-of-modal">
+            <a id="arrow-return" href="#"
+              ><i class="fa-solid fa-arrow-left"></i
+            ></a>
+            <a id="button-to-close-second-window" href="#"
+              ><i class="fa-solid fa-xmark"></i
+            ></a>
+          </div>
+          <h3 class="modal-title">Ajout photo</h3>
+          <form id="modal-edit-work-form" method="post" action="#">
+            <div id="modal-edit-new-photo" class="modal-content-new-photo">
+              <i id="photo-add-icon" class="fa-regular fa-image"></i>
+              <label id="new-image">+ Ajouter photo</label>
+              <input
+                id="form-image"
+                type="file"
+                name="image"
+                accept="image/*, .jpg, .jpeg, .png"
+                required
+              />
+              <p id="photo-size">jpg, png : 4mo max</p>
+            </div>
+            <div class="modal-content-new-category-title">
+              <label for="form-title">Titre</label>
+              <input
+                type="text"
+                name="title"
+                id="form-title"
+                value=""
+                required
+              />
+              <label for="form-category">Catégorie</label>
+              <select class="choice-category" id="form-category" required>
+                <option value=""></option>
+              </select>
+              <hr class="border-in-second-window-of-modal" />
+              <input type="submit" id="submit-new-work" value="Valider" />
+            </div>
+          </form>
+        </div>
+      </div>
     </main>
     <footer>
       <nav>
@@ -96,5 +160,6 @@
       </nav>
     </footer>
     <script src="./assets/js/main.js" defer></script>
+    <script src="./assets/js/modale.js" defer></script>
   </body>
 </html>
