--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -68,7 +68,7 @@
           </a>
         </div>
         <div id="categories">
-          <!-- Les catégories seront ajoutées dynamiquement ici -->
+          <!-- Les catégories seront ajoutées dynamiquement ici ------->
         </div>
         <div class="gallery">
           <!-- Les projets seront ajoutés dynamiquement ici -->
@@ -100,7 +100,7 @@
             ><i class="fa-solid fa-xmark"></i
           ></a>
           <h3 id="title-modal-overlay" class="modal-title">Galerie photo</h3>
-          <div class="modal-content"></div>
+          <div class="modal-content work-container"></div>
           <hr />
           <div class="container-modal-add-and-modal-delete">
             <button id="modal-edit-add" class="modal-add">
