--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -49,8 +49,7 @@
           <li>Mentions Légales</li>
         </ul>
       </nav>
-      <script src="./assets/js/login.js"></script>
-
+      <script src="./assets/js/login.js" defer></script>
       <!-- Charger le script spécifique à la page login -->
     </footer>
   </body>
