finalisation de la modal2

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -105,12 +105,13 @@
             <div class="modal2_setphoto">
               <img src="#" alt="image prechargee" class="modal2img" />
               <i class="fa-regular fa-image"></i>
-              <label id="uploadfile" class="modal2imagelabel"
+              <label for="uploadfile" class="modal2imagelabel"
                 >+ Ajouter photo</label
               >
               <input
-                type="files"
+                type="file"
                 id="uploadfile"
+                class="uploadfile"
                 name="image"
                 accept=".jpg, .jpeg, .png"
                 required
